--- a/src/reset.less
+++ b/src/reset.less
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   #root{
-    min-height: 100%;
+    height: 100%;
   }
 }
 
