--- a/src/pages/Login/login.module.less
+++ b/src/pages/Login/login.module.less
@@ -32,7 +32,7 @@
         width: 100%;
         .left{
             width: 40%;
-            float: left;
+            float: right;
             height: 100%; 
             position: relative;  
             .loginBox{
@@ -48,63 +48,21 @@
                     color:rgba(27,39,51,1);
                     line-height:30px;
                     margin-bottom: 20px;
-                }
-                .form{
-                    width: 100%;
-                    text-align: left;
-                    input{
-                        width: 100%;
-                        height:40px;
-                        background:rgba(255,255,255,1);
-                        box-shadow:0px 0px 3px 0px rgba(0,0,0,0.05);
-                        border-radius:20px;
-                        border:1px solid rgba(223,226,230,1);
-                        outline: none;
-                        text-indent: 2em;
-                        &:last-child{
-                            margin-bottom: 0;
-                        }
-                    }
-                    p{
-                        font-size:12px;
-                        font-family:PingFangSC;
-                        font-weight:600;
-                        color:rgba(107,108,111,1);
-                        line-height:17px;
-                    }
-                }
-                .submit{
-                    width:40%;
-                    height:40px;
-                    background:rgba(65,100,228,1);
-                    box-shadow:0px 10px 20px 0px rgba(65,100,228,0.3);
-                    border-radius:20px;
-                    font-size:14px;
-                    font-family:PingFangSC;
-                    font-weight:600;
-                    color:rgba(255,255,255,1);
-                    line-height:40px;
-                    text-align: center;
-                    letter-spacing: 10px;
-                    margin-top: 30px;
-                    cursor: pointer;
-                    display: inline-block;
-                }
+                }                
             }        
         }
         .right{
             width: 60%;
-            float: right;
+            float: left;
             height: 100%;
             background-color: #fff;
             display: flex;
             align-items: center;
-            justify-content: flex-end;
+            justify-content: center;
             position: relative;
             img{
-                height:52.4%;
+                height:70%;
                 display: block;
-                margin-right: 25%;
             }
             .copyRight{
                 position: absolute;
