--- a/src/layout/BasicLayout/Header/index.module.less
+++ b/src/layout/BasicLayout/Header/index.module.less
@@ -1,3 +1,23 @@
 .trigger{
-    
+    height: 64px;
+    padding: 22px 24px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all .3s,padding 0s;
+    &:hover{
+        background-color: rgba(0,0,0,.025);
+    }
+}
+
+.action{
+    float: right;
+    .logout{
+        font-size: 20px;
+        padding: 22px 15px;
+        cursor: pointer;
+        transition: all .3s,padding 0s;
+        &:hover{
+            background-color: rgba(0,0,0,.025);
+        }
+    }
 }
