--- a/src/reset.less
+++ b/src/reset.less
@@ -62,3 +62,49 @@ table td {
   line-height: 32px;
 }
 
+
+// card样式自定义
+.ant-card{
+  border-radius: 16px   !important;
+  border: none  !important;
+  background:rgba(255,255,255,1) !important;
+  box-shadow:0px 0px 10px 0px rgba(0,0,0,0.05) !important;
+}
+
+// input的自定义样式
+.ant-input{
+  border-radius: 16px   !important;
+  // border:1px solid rgba(217,217,217,1) !important;
+}
+
+// button的自定义样式
+.ant-btn{
+  border-radius: 16px   !important;
+}
+
+// 下拉框的自定义样式
+.ant-select-selection{
+  border-radius: 16px   !important;
+}
+
+// 弹框的自定义样式
+.ant-modal-content{
+  border-radius: 16px   !important;
+  overflow: hidden !important;
+}
+
+// 进度条的自定义样式
+.ant-steps-item-title{
+  font-size: 14px !important; 
+}
+.ant-steps-dot .ant-steps-item-tail::after, .ant-steps-dot.ant-steps-small .ant-steps-item-tail::after{
+  height: 1px !important;
+}
+//菜单对齐方式
+.ant-menu-inline-collapsed > .ant-menu-submenu > .ant-menu-submenu-title{
+  padding: 0 28px !important;
+}
+
+.margin_b_15{
+  margin-bottom: 15px;
+}
