--- a/src/reset.less
+++ b/src/reset.less
@@ -37,14 +37,14 @@ code {
 //滚动条样式----------------------end
 
 //设置table 文本溢出的问题
-table {
-  table-layout: fixed;
-}
-table td {
-  text-overflow: ellipsis !important;
-  white-space: nowrap !important;
-  overflow: hidden !important;
-}
+// table {
+//   table-layout: fixed;
+// }
+// table td {
+//   text-overflow: ellipsis !important;
+//   white-space: nowrap !important;
+//   overflow: hidden !important;
+// }
 //其他table通用样式
 .ant-table-thead > tr > th, .ant-table-tbody > tr > td{
   padding: 10px 16px !important;
