--- a/src/layout/BasicLayout/index.module.less
+++ b/src/layout/BasicLayout/index.module.less
@@ -7,7 +7,11 @@
 }
 .logo{
     height: 64px;
-    background-color: #09f;
+    text-align: center;
+    line-height: 64px;
+    color: #333;
+    font-size: 24px;
+    background-color: #d3d3d3;
 }
 
 .sider{
