--- a/src/layout/BasicLayout/index.module.less
+++ b/src/layout/BasicLayout/index.module.less
@@ -7,7 +7,10 @@
 }
 .logo{
     height: 64px;
-    background-color: #09f;
+    line-height: 64px;
+    text-align: center;
+    font-size: 24px;
+    color: aliceblue;
 }
 
 .sider{
