加组件配置

--- a/src/pages/Demo/index.less
+++ b/src/pages/Demo/index.less
@@ -1,8 +1,9 @@
 
 .form-designer{
+    display: flex;
     .form-list{
-        width: 50%;
-        float: left;
+        width: 200px;
+        flex: 0 0 200px;
         .item{
             height: 30px;
             border: 1px solid #d3d3d3;
@@ -10,8 +11,7 @@
         }
     }
     .form-container{
-        width: 50%;
-        float: left;
+        flex: 1;
     }
     
 }
