--- a/src/pages/Demo/index.less
+++ b/src/pages/Demo/index.less
@@ -5,9 +5,23 @@
         width: 200px;
         flex: 0 0 200px;
         .item{
-            height: 30px;
-            border: 1px solid #d3d3d3;
-            margin-bottom: 5px;
+            width: 90px;
+            float: left;
+            height: 80px;
+            background-color: #f7f8fa;
+            border-radius: 4px;
+            margin: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            cursor: move;
+            .icon{
+                font-size: 20px;
+            }
+            .text{
+                margin-top: 10px;
+            }
         }
     }
     .form-container{
