--- a/src/pages/Demo/index.less
+++ b/src/pages/Demo/index.less
@@ -26,9 +26,17 @@
     }
     .form-container{
         flex: 1;
+        >div{
+            height: 100%;
+        }
+        .component-item,.item{
+            display: inline-block;
+            width: 100%;
+            height: 50px;
+        }
     }
     
 }
 .sortable-ghost{
-    border-top: 1px dashed red !important;
-}
+    background-color: #09f !important;
+} 
