--- a/src/pages/Demo/index.less
+++ b/src/pages/Demo/index.less
@@ -37,6 +37,6 @@
     }
     
 }
-.sortable-ghost{
-    background-color: #09f !important;
-} 
+// .sortable-ghost{
+//     background-color: #09f !important;
+// } 
