--- a/src/FormDesign/form.less
+++ b/src/FormDesign/form.less
@@ -6,4 +6,19 @@
             margin: 10px;
         }
     }
+    .middle{
+        height: 500px;
+        border: 1px solid #d3d3d3;
+        .item-wrapper{
+            float: left;
+            height: 40px;            
+            width: 50%;
+            box-sizing: border-box;
+            padding: 0 10px;
+            .item{
+                height: 100%;
+                background-color: aqua;
+            }
+        }
+    }
 }
