--- a/src/Demo/index.less
+++ b/src/Demo/index.less
@@ -47,18 +47,24 @@
         box-sizing: border-box;
         border-top: 1px solid @subColor;
         overflow: auto;
+        padding: 10px;
+        box-sizing: border-box;
     }
     .tree-view{
         height: 40%;
         box-sizing: border-box;
         border-top: 1px solid @subColor;
         overflow: auto;
+        padding: 10px;
+        box-sizing: border-box;
     }
 }
 
 .design-right{
     box-sizing: border-box;
     border-top: 1px solid @subColor;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .design-middle{
