--- a/src/layouts/BasicLayout/index.less
+++ b/src/layouts/BasicLayout/index.less
@@ -47,3 +47,19 @@
     background-color: #f5f5f5;
   }
 }
+
+.logo{
+  height: 64px;
+  background-color: #f3f3f3;
+  line-height: 64px;
+  font-size: 0;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  cursor: pointer;
+  span{
+    font-size: 18px;
+    margin-left: 5px;
+  }
+}
