--- a/src/global.css
+++ b/src/global.css
@@ -28,3 +28,15 @@ body {
   border-radius: 4px !important;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
 }
+
+.ant-tabs-top-bar{
+  background-color: #fff;
+  border-radius: 4px !important;
+  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+}
+.ant-tabs-tabpane{
+  background-color: #fff;
+  padding: 12px 16px;
+  border-radius: 4px !important;
+  box-shadow: 0 0 8px rgba(0,0,0,0.1);
+}
